--- a/init.org
+++ b/init.org
@@ -798,6 +798,7 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
    - Omit uninteresting files; see ~dired-omit-files~.
 
      #+BEGIN_SRC emacs-lisp
+       (require 'dired-x)
        (add-hook 'dired-mode-hook #'dired-omit-mode)
      #+END_SRC
 
