--- a/init.org
+++ b/init.org
@@ -1726,6 +1726,31 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
        ;; Truncate long lines with helm
        ;; Only seems to affect helm-projectile
        (customize-set-variable 'helm-truncate-lines t)
+
+       ;; Use old `helm-projectile-ag', which uses `helm-ag'
+       ;; `helm-ag' is no longer on MELPA
+       ;; See: https://github.com/emacsattic/helm-ag/issues/417
+       (defun helm-projectile-ag (&optional options)
+         "Helm version of `projectile-ag'."
+         (interactive (if current-prefix-arg (list (helm-read-string "option: " "" 'helm-ag--extra-options-history))))
+         (if (require 'helm-ag nil t)
+             (if (projectile-project-p)
+                 (let* ((grep-find-ignored-files (cl-union (projectile-ignored-files-rel) grep-find-ignored-files))
+                        (grep-find-ignored-directories (cl-union (projectile-ignored-directories-rel) grep-find-ignored-directories))
+                        (ignored (mapconcat (lambda (i)
+                                              (concat "--ignore " i))
+                                            (append grep-find-ignored-files grep-find-ignored-directories (cadr (projectile-parse-dirconfig-file)))
+                                            " "))
+                        (helm-ag-base-command (concat helm-ag-base-command " " ignored " " options))
+                        (current-prefix-arg nil))
+                   (helm-do-ag (projectile-project-root) (car (projectile-parse-dirconfig-file))))
+               (error "You're not in a project"))
+           (when (yes-or-no-p "`helm-ag' is not installed. Install? ")
+             (condition-case nil
+                 (progn
+                   (package-vc-install '(helm-ag :url "https://github.com/emacsattic/helm-ag"))
+                   (helm-projectile-ag options))
+               (error (error "`helm-ag' is not available. Can you reach GitHub?"))))))
      #+END_SRC
 ** Python
 
