Add --color to rg command

--- a/init.org
+++ b/init.org
@@ -1106,7 +1106,7 @@ Lars Tveito's excellent [[https://github.com/larstvei/dot-emacs/blob/master/init
        (customize-set-variable 'helm-ff-auto-update-initial-value t)
 
        ;; Use `rg' when grepping, and use default match face
-       (customize-set-variable 'helm-grep-ag-command "rg --smart-case --search-zip --no-heading --line-number %s -- %s %s")
+       (customize-set-variable 'helm-grep-ag-command "rg --color=never --smart-case --search-zip --no-heading --line-number %s -- %s %s")
      #+END_SRC
 
    - Change the prefix key for =helm= from =C-x c= to something else, because
